--- a/templates/ratings/rate.html
+++ b/templates/ratings/rate.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}List of users{% endblock title %}
-
+{% block title %}Rate user{% endblock title %}
 
 {% block content %}
-
 
 <body class="flex bg-gray-100 min-h-screen">
     <aside class="hidden sm:flex sm:flex-col">
@@ -217,15 +215,6 @@
                     <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
                 </div>
                 <div class="flex flex-wrap items-start justify-end -mb-3">
-                    <a href={% url 'users:edit_user' pk=user.pk %}><button
-                        class="inline-flex px-5 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
-                        <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                            class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
-                        </svg>
-                        Edit Profile
-                    </button></a>
                     <button
                         class="inline-flex px-5 py-3 text-white bg-purple-600 hover:bg-purple-700 focus:bg-purple-700 rounded-md ml-6 mb-3">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
@@ -237,92 +226,125 @@
                     </button>
                 </div>
             </div>
-            <!--USERS LIST-->
-            <section class="grid md:grid-cols-2 xl:grid-cols-1 gap-6">
-                <div class="flex items-center p-8">
-                    <table class="min-w-full divide-y divide-gray-200">
-                        <thead class="bg-gray-50">
-                            <tr>
-                                <th scope="col"
-                                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    Name
-                                </th>
-                                <th scope="col"
-                                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    Title
-                                </th>
-                                <th scope="col"
-                                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    Status
-                                </th>
-                                <th scope="col"
-                                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    Phone Number
-                                </th>
-                                <th scope="col"
-                                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    <a href={% url 'users:rate_user' pk=user.pk %}><span class="sr-only">Rate</span></a>
-                                </th>
-                            </tr>
-                        </thead>
-                        {% for office in offices %}
-                        {% for user in office.user_set.all %}
-                        <tbody class="bg-white divide-y divide-gray-200">
-                            <tr>
-                                <td class="px-6 py-4 whitespace-nowrap">
-                                    <div class="flex items-center">
-                                        <div class="flex-shrink-0 h-10 w-10">
-                                            <img class="h-10 w-10 rounded-full"
-                                                src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                                                alt="">
-                                        </div>
-                                        <div class="ml-4">
-                                            <div class="text-sm font-medium text-gray-900">
-                                                <h1 href="#">{{ user.first_name }}
-                                                    {{ user.last_name }}</h1>
-                                            </div>
-                                            <div class="text-sm text-gray-500">
-                                                {{ user.email }}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="px-6 py-4 whitespace-nowrap">
-                                    <div class="text-sm text-gray-900">{{ user.title }}</div>
-                                    <div class="text-sm text-gray-500"><a
-                                            href="{{ office.get_absolute_url }}">{{ user.work_office }}</a>
-                                    </div>
-                                </td>
-                                <td class="px-6 py-4 whitespace-nowrap">
-                                    {% if user.is_active %}
-                                    <span
-                                        class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
-                                        Active
-                                    </span>
-                                    {% else %}
-                                    <span
-                                        class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-red-100 text-red-800">
-                                        False
-                                    </span>
-                                    {% endif %}
-                                </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                                    {{ user.phone_number }}
-                                </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                    <a href="{% url 'users:rate_user' pk=user.pk %}" class="text-indigo-600 hover:text-indigo-900">Rate</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                        {% endfor %}
-                        {% endfor %}
-                    </table>
+            <!--Employee information-->
+            <div class="bg-white shadow overflow-hidden sm:rounded-lg">
+                <div class="px-4 py-5 sm:px-6">
+                    <img class="h-10 w-10 rounded-full"
+                        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
+                        alt="">
+                    <h3 class="text-lg leading-6 font-medium text-gray-900">
+                        {{ r_user.first_name }} {{ r_user.last_name }}
+                    </h3>
+                    <p class="mt-1 max-w-2xl text-sm text-gray-500">
+                        Personal details.
+                    </p>
                 </div>
-            </section>
+                <form method="post">
+                    {% csrf_token %}
+                    {% if form.errors %}
+                    <p>Please correct the following errors:</p>
+                    {% for field in form %}
+                    {% if field.errors %}
+                    <div class="alert alert-primary" role="alert">
+                        {{ field.label }}: {{ field.errors|striptags }}
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+                    {% endif %}
+                    <div class="border-t border-gray-200">
+                        <dl>
+                            <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-gray-500">
+                                    <b>Professionalism</b>
+                                    <p>Being polite, well-spoken, calm, and presentable is all part of being professional at work.</p>
+                                </dt>
+                                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {{ form.rate_professionalism }}
+                                    <div class="text-sm font-medium text-gray-500"></div>
+                                </dd>
+                            </div>
+                            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-gray-500">
+                                    <b>Teamwork</b>
+                                    <p>The ability to work with other people in a team, by fostering relationships in a professional manner, in order to achieve a common goal, is an asset to any company.</p>
+                                </dt>
+                                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {{ form.rate_teamwork }}
+                                </dd>
+                            </div>
+                            <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-gray-500">
+                                    <b>Communication</b>
+                                    <p>The ability to communicate information accurately, clearly and as intended.</p>
+                                </dt>
+                                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {{ form.rate_communication }}
+                                </dd>
+                            </div>
+                            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-gray-500">
+                                    <b>Plan and organize</b>
+                                    <p>Accurately estimate time and effort required to complete a task.</p>
+                                </dt>
+                                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {{ form.rate_organize }}
+                                </dd>
+                            </div>
+                            <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-gray-500">
+                                    <b>Problem solving</b>
+                                    <p>Employees who work on something until it’s solved, or complete, and who bring their best efforts to solve problems are considered good employees.</p>
+                                </dt>
+                                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {{ form.rate_problem_solving }}
+                                </dd>
+                            </div>
+                            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-gray-500">
+                                    <b>Personality</b>
+                                    <p>Employees who bring a positive attitude to work have a positive impact on those around them and improve the energy in the team.</p>
+                                </dt>
+                                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {{ form.rate_personality }}
+                                </dd>
+                            </div>
+                            <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-gray-500">
+                                    <b>Reliability</b>
+                                    <p>Reliable and dependable in performing job-related tasks, finishing assigned projects, meeting deadlines and appointments.</p>
+                                </dt>
+                                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {{ form.rate_reliability }}
+                                </dd>
+                            </div>
+                            <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                                <dt class="text-sm font-medium text-gray-500">
+                                    <b>Review</b>
+                                    <p>Short review(min 50 chars).</p>
+                                </dt>
+                                <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                    {{ form.text }}
+                                </dd>
+                            </div>
+                            {% if user.id is not None %}
+                            <div class="flex flex-wrap -mx-3 mb-6">
+                                <div class="w-full flex justify-center">
+                                    <button type="submit" value="Submit"
+                                        class="shadow-none bg-blue-700 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full">
+                                        Submit
+                                    </button>
+                                </div>
+                            </div>
+                            {% else %}
+                             You must be logged in to review another user.
+                            {% endif %}
+                        </dl>
+                    </div>
+                </form>
+            </div>
         </main>
     </div>
 </body>
-
 
 
 {% endblock content %}
