--- a/templates/ratings/charts_scripts.html
+++ b/templates/ratings/charts_scripts.html
@@ -17,7 +17,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('proffesionalism_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -34,7 +34,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -42,7 +44,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -63,7 +67,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('teamwork_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -80,7 +84,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -88,7 +94,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -109,7 +117,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('communication_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -126,7 +134,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -134,7 +144,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -155,7 +167,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('organize_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -172,7 +184,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -180,7 +194,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -201,7 +217,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('problem_solving_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -218,7 +234,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -226,7 +244,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -247,7 +267,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('personality_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -264,7 +284,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -272,7 +294,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -293,7 +317,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('reliability_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -310,7 +334,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -318,7 +344,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -339,7 +367,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('honesty_integrity_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -356,7 +384,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -364,7 +394,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -385,7 +417,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('emotional_intelligence_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -402,7 +434,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -410,7 +444,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
@@ -431,7 +467,7 @@
         $(document).ready(function () {
             var ctx = document.getElementById('willingness_to_learn_chart').getContext('2d');
             var myChart = new Chart(ctx, {
-                type: 'pie',
+                type: 'polarArea',
                 data: {
                     labels: [{% for user in avg_user_rating|avg_user_rating %}
                         '{{ user.reviewed_user__first_name }} {{ user.reviewed_user__last_name }}',
@@ -448,7 +484,9 @@
                             'rgba(255, 206, 86, 0.2)',
                             'rgba(75, 192, 192, 0.2)',
                             'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(255, 159, 64, 0.2)',
+                            'rgba(168, 237, 161, 0.48)',
+                            'rgba(210, 116, 40, 0.4)'
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
@@ -456,7 +494,9 @@
                             'rgba(255, 206, 86, 1)',
                             'rgba(75, 192, 192, 1)',
                             'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(57, 210, 40, 1)',
+                            'rgba(210, 116, 40, 1)'
                         ],
                         borderWidth: 1
                     }]
