--- a/templates/ratings/rate.html
+++ b/templates/ratings/rate.html
@@ -10,7 +10,7 @@
         <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
                 <img class="h-10 w-10 rounded-full"
-                    src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
+                    src="{{ user.profile_image.url }}"
                     alt="">
                 <h3 class="text-lg leading-6 font-medium text-gray-900">
                     {{ r_user.first_name }} {{ r_user.last_name }}
