--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -198,7 +198,7 @@
                     <ul class="p-6 space-y-6">
                         <li class="flex items-center">
                             <div class="h-10 w-10 mr-3 bg-gray-100 rounded-full overflow-hidden">
-                                <img src="{{MEDIA_URL}}{{ user.reviewed_user__profile_image }}">
+                                <img src="{{MEDIA_URL}}{{ user.reviewed_user__profile_image.url }}">
                             </div>
                             <span class="text-gray-600">{{ user.reviewed_user__first_name }}
                                 {{ user.reviewed_user__last_name }}</span>
